# UmbraRelay

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tmp.sh  umbrarelay.toml.example
.github/: pull_request_template.md
.github/workflows/: release.yml
documentation/: README.md
documentation/examples/: config-examples.md  use-cases.md
documentation/getting-started/: README.md  basic-usage.md  first-run.md  installation.md
documentation/technical/: README.md  api-reference.md  architecture.md  auto-updates.md  console-commands.md  content-extraction.md  database-schema.md  development.md  git-hooks.md  ingestion-system.md  normalization.md  release-process.md  theming.md
documentation/troubleshooting/: windows-debugging.md
documentation/user-guide/: README.md  adding-sources.md  configuration.md  inbox-management.md  troubleshooting.md
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs  secure.rs  toml.rs
src-tauri/src/ingestion/: atom.rs  content_detection.rs  extraction.rs  github.rs  github_notifications.rs  mod.rs  rss.rs  traits.rs  utils.rs
src-tauri/src/normalization/: mod.rs
src-tauri/src/oauth/: github.rs  mod.rs
src-tauri/src/storage/: db.rs  mod.rs  models.rs
src/components/: CustomViewConfig.vue  CustomViewView.vue  InboxView.vue  ItemDetail.vue  LeavingSoonView.vue  LinkHoverPreview.vue  SecretsManager.vue  SourceConfig.vue  TodayView.vue
(+44 files in other folders)
